
2005-10-10
	* src/ppogl/base/os.* src/main.cpp src/stuff.cpp
	implemented handling of home and user directory in ppogl
	
	* src/course_load.cpp data/init.nut
	added support courses in the users home dir
	
	* src/ppogl/base/glextensions.*
	added glextension system

2005-10-09
	* (*)
	added background image for fps counter
	improved hud to support backgrounds for fps and course percentage
	fixed bug in percentagebar

	* src/squirrel/* src/sqstdlib/*
	updated squirrel to 2.0.5

2005-10-08
	* src/ppogl/audio/audiomgr.* src/paused.cpp
	added AudioMgr::pauseMusic()
	pause music in PAUSED mode
	
	* src/ppogl/audio/audiomgr.cpp
	added fallback if Mix_OpenAudio fails
	
	* src/winsys.cpp
	added fallbacks if SDL_SetVideoMode fails

2005-10-07
	* src/course_quad.*
	removed files
	
	* src/*
	several code cleanups and fixes

2005-10-05
	* src/graphicsconfig.*
	added graphics configuration
	terrain detail level
	texture detail level
	player detail level

2005-10-04
	* src/ppogl/ui/scale.*
	added hscale widget (horizontal slider)
	
	* src/audioconfig.*
	replaced enable sound/music checkboxes with volume controls

2005-10-03
	* src/*
	fixed several memleaks
	code cleanups
	
	* src/ppogl/base/error.* src/main.cpp src/gl_utils.cpp
	improved log system
	added commandline options
	
	* src/*
	add log messages to several files
	
	* src/ppogl/audio/audiomgr.* src/main.cpp data/config.nut.in
	added music and sound volume control

2005-09-27
	* data/config.nut.in
	fixed several default settings
	
	* src/ppogl/audio/audiomgr.cpp/h
	check if audiomgr is initialized
	added possibility to disable sound and music
	
	* src/main.cpp
	fixed initialisation of AudioMgr
	
	* src/audioconfig.cpp
	fixed most problems in audioconfig (still needs some work)
	
	* src/paused.cpp
	only continue if configured pause key is pressed
	stop music playback (pausing the music is not implemented yet)
	
	* src/ppogl//audio/sound.cpp
	partially fixed handling of non endless playback

2005-09-26